--- a/npm-registry-consumer/src/App.css
+++ b/npm-registry-consumer/src/App.css
@@ -1,7 +1,9 @@
 .App {
-  text-align: center;
-}
 
+}
+.App-container{
+  padding: 50px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -12,20 +14,35 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-header-container{
+  flex-direction: row;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex: 1;
+  background-color: #282c34;
 }
-
+.App-header {
+  padding-left: 20px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  color: white;
+  flex: 6;
+}
+.App-link-container{
+  padding: 20px;
+  padding-right: 100px;
+  display: flex;
+  flex: 2;
+  align-items: center;
+}
+.App-link-container a{
+  padding-left: 20px;
+  text-decoration: none;
+}
 .App-link {
-  color: #61dafb;
+  color: white;
+  flex-direction: row;
+  text-decoration: none;
 }
 
 @keyframes App-logo-spin {
